feat(payroll): upgrade payroll workflow and admin capabilities